--- a/code/HomeworkSubmissionCode.Rmd
+++ b/code/HomeworkSubmissionCode.Rmd
@@ -38,5 +38,10 @@ ggplot(data = my_data, # using the data frame my_data
   stat_summary(fun = mean, geom = "point", shape = 20, size = 3, color = "red") + # Add mean points
   labs(x = "Day of the Week", # relabeling the x-axis
        y = "Steps", # and the y-axis 
-       title = "Step Count Patterns Across the Week") # adding a title 
+       title = "Step Count Patterns Across the Week"), + # adding a title 
+
+  theme_minimal() # changing the theme from default
 ```
+
+c. Caption
+The box plot shows the mean number of steps taken each week day. The data was collected from the start of April 2025 to the end of May 2025. The horizontal line inside each box represents the median amount of steps taken on that day of the week, while the box itself represents the interquartile range. The bottom of the box represents the 1st quartile, or the 25th percentile, while the top of the box represents the 3rd quartile, or the 75th percentile. The whiskers, or lines extending from the box, show the typical range of step count. The dots outside of the box represent outliers, or days in which step count was far outside of the average for that day. The red dot represents the mean number of steps for each day of the week. 
