Adding in space to attach my sketch and affetive visualization piece. Added my written out artist statement for my affective visualization.

--- a/code/HomeworkSubmissionCode.Rmd
+++ b/code/HomeworkSubmissionCode.Rmd
@@ -75,3 +75,13 @@ Problem 2: Affective Visualization
 
 a. 
 For my personal data, an example of affective visualization that I could use would be a week calendar. On this calendar, each day of the week would display the mean number of steps I take on average during that day of the week. The day of the week with the largest number of steps would be a very dark color, where the day of the week with the least amount of steps would be a light color. The entire calendar would be a gradient displaying most amount of steps to least amount of steps. This would create an interesting and easy-to-follow representation of how each day of the week’s average step count differs. 
+
+b. Sketch of Idea
+
+c. Draft of Visualization
+
+d. Artist Statement
+
+My piece is a week calendar displaying the average number of steps I take depending on the day of the week. The darker the color of the box, the more steps I take. Clearly, Friday had the greatest average number of steps, as the color of the box is the darkest, while Monday had the least average number of steps as the color of the box is the lightest. In creating this visualization, I was influenced by Giorgia Lupi and Steanie Posavec’s “Dear Data” project because of their use of everyday objects to represent their data. They made a postcard have significance to their project, while I am allowing the everyday object of a calendar to be significant to my project. I was also very inspired by their use of color and wanted to incorporate that into my project. My work is in digital form. I used Canva to create a week calendar and colored each day of the week using the software on this website. In R studio, I took my step count data and found the average amount of steps I took per day of the week. These were the numbers that I used to fill in my calendar. 
+
+
