--- a/code/HomeworkSubmissionCode.Rmd
+++ b/code/HomeworkSubmissionCode.Rmd
@@ -92,3 +92,8 @@ The statistical test the authors are using to address their main research questi
 
 ![Graph](images/graph.jpg)
 
+b. Visual Clarity
+
+The figure I included in Part A clearly represents the statistics of the project clearly. The x and y-axis are included in a logical position. The y-axis represents the mean number of track incursions, which is a summary statistic in itself. However, there is not extra information included, such as standard error or model predictions, which would paint an even more full picture. 
+
+
